--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
         <a href="personalidades.html">Personalidades</a>
         <a href="SO.html">Sistema Operacional</a>
-        <a href="software.html">Conceito de Software</a>
+        <a href="Software.html">Conceito de Software</a>
         <a href="hardware.html">Conceito de Hardware</a>
     </nav>
 
