--- a/Software.html
+++ b/Software.html
@@ -41,7 +41,7 @@ MacOS (Apple)
 Android e IOS (para dispositivos móveis)
 Os sistemas operacionais são indispensáveis para o funcionamento de qualquer dispositivo, seja ele um computador ,smartphone ou até mesmo um eletrodoméstico moderno.
 </h2>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/so.jpg" />
+<img src="Imagens/so.jpg" />
 
 <h1>Sistemas Livres<h1>
 <p>
@@ -51,7 +51,7 @@ Esses sistemas são aqueles que têm distribuição gratuita, ou seja, você nã
  Dessa forma você paga pelo sistema operacional também na hora da compra. Com o sistema livre você não terá esse gasto, mas preciso ter bem claro que ele não será exatamente como um sistema pago. Além disso, é um pouco complicado conseguir compatibilidade entre os programas de sistemas livres. 
 </p>
 
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/sl.jpg" />
+<img src="Imagens/sl.jpg" />
 
 
 <h2>
@@ -66,7 +66,7 @@ Banco de dados MySQL.
 O software proprietário, privativo ou não livre, é um software para computadores que é licenciado com direitos exclusivos para o produtor. Conforme o local de distribuição do software este pode ser abrangido por patentes, direitos de autor assim como limitações para a sua exportação.
 </p>
 
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/Sp.jpg" />
+<img src="Imagens/Sp.jpg" />
 
 <h2>
 Microsoft Windows
@@ -80,7 +80,7 @@ Norton Antivirus
 O software de sistema é um conjunto de programas ou aplicativos nativos que têm dois propósitos: gerenciar recursos físicos do dispositivo para coordenar tarefas e administrar a memória para seu uso; e oferecer uma experiência de uso para que seja possível controlar e interagir com o sistema.
 </p>
 
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/SS.jpg" />
+<img src="Imagens/SS.jpg" />
 <h2>
 Carregadores de programa . Programas encarregados da execução de outros programas e de garantir a estabilidade do sistema. Sistemas operacionais.
 </h2>
@@ -91,7 +91,7 @@ Carregadores de programa . Programas encarregados da execução de outros progra
 Um software aplicativo é um tipo de software concebido para desempenhar tarefas práticas ao usuário para que este possa concretizar determinados trabalhos.
 </p>
 
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/SA.jpg" />
+<img src="Imagens/SA.jpg" />
 <h2> 
 Chrome, calculadora, Windows Media Player, Microsoft Word, AutoCAD, Adobe Photoshop.
 </h2>                                                                                                                                                                                                                                                                                                                           
@@ -101,7 +101,7 @@ Chrome, calculadora, Windows Media Player, Microsoft Word, AutoCAD, Adobe Photos
 <p>
 Softwares de programação são ferramentas usadas pelos programadores para desenvolver novos softwares e programas. Eles utilizam diferentes linguagens de programação (C, Java, Python, Swift, etc.) e abrigam compiladores, intérpretes e depuradores.
 </p>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/SPR.jpg" />
+<img src="Imagens/SPR.jpg" />
 
 <h2>
 Editores de Texto,Compiladores e Interpretadoreso  e Linguagens de Programação 
