--- a/SO.html
+++ b/SO.html
@@ -24,7 +24,7 @@ font-size:18px;
 
 	
  <h1>Windows 1</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win1.webp" />
+<img src="Imagens/win1.webp" />
 
 <p>
 Aqui começa a história da Microsoft com seus sistemas operacionais Windows. A primeira versão do SO foi lançada em novembro de 1985 e foi a tentativa inicial da companhia em entregar uma interface gráfica em 16 bits.
@@ -33,13 +33,13 @@ O Windows 1 foi construído sobre o MS-DOS e seu funcionamento se apoiava bastan
 </p>
 
 <h1>Windows 2</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win2.webp" />
+<img src="Imagens/win2.webp" />
 <p>
 Dois anos depois da estreia no mercado de sistemas operacionais, a Microsoft resolveu fazer o lançamento do Windows 2 em dezembro de 1987. A grande inovação desse software era a possibilidade de as janelas sobreporem umas às outras, funcionalidade que parece piada nos dias de hoje.
 </p>
 
 <h1>Windows 3</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win3.webp" />
+<img src="Imagens/win3.webp" />
 <p>
 Lançado em 1990, esse foi o primeiro SO da Microsoft a exigir um disco rígido para ser instalado. Também foi aquele que despertou a atenção do mercado para o nome “Windows”, colocando-o de vez na disputa pela popularidade.
 
@@ -47,7 +47,7 @@ A grande inovação do Windows 3 diz respeito aos programas do MS-DOS que agora 
 </p>
 
 <h1>Windows 3.1</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win3.1.webp" />
+<img src="Imagens/win3.1.webp" />
 
 
 <p>
@@ -57,7 +57,7 @@ O Windows 3.1 exigia 1 MB de memória RAM para ser executado e, depois de instal
 </p>
 
 <h1>Windows 95</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win95.webp" />
+<img src="Imagens/win95.webp" />
 
 <p>
 
@@ -68,13 +68,13 @@ Foi nesta versão que o Internet Explorer fez a sua estreia, mas chegou apenas e
 </p>
 
 <h1>Windows 98</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win98.webp" />
+<img src="Imagens/win98.webp" />
 <p>
 Lançado em 1998, o Windows 98 foi construído sobre a versão anterior e trouxe uma série de novidades. Entre elas estão o IE 4, o Outlook Express, o Windows Address Book, o Microsoft Chat e o NetShow Play, que posteriormente seria substituído pelo Windows Media Player. Com exceção do IE, do Outlook e do WMP, todas as outras ferramentas já foram aposentadas ou substituídas.
 
 
 <h1>Windows ME</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win%20me.webp" />
+<img src="Imagens/win%20me.webp" />
 
 <p>
 O Windows Millennium Edition foi a última versão do SO baseada no MS-DOS e considerada por muitos como a pior de todas. Ela foi lançada em 2000 e teve uma variante que foi especialmente desenvolvida para equipar servidores, o Windows 2000.
@@ -82,21 +82,21 @@ O Windows Millennium Edition foi a última versão do SO baseada no MS-DOS e con
 O IE 5.5, o Windows Media Player 7 e o Windows Movie Maker fizeram a sua estreia no Millennium Edition. O recurso de autocompletar também fez a sua primeira aparição nesse sistema operacional, mas isso não foi suficiente para salvá-lo das críticas por causa dos bugs e problemas de instalação que apresentava.
 </p>
 <h1>Windows XP</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win%20xp.webp" />
+<img src="Imagens/win%20xp.webp" />
 <p>
 Alguns argumentam que esta seja a melhor versão do sistema operacional da Microsoft. Ela foi lançada em outubro de 2001 e foi a que mais durou no mercado, recebendo suporte até o mês de abril de 2014 — 13 anos após a sua estreia no segmento.
 
 O SO ainda se mostra relativamente popular, estando presente em mais de 20% dos computadores de todos os adeptos do SO. As principais novidades foram a repaginada no visual e a estabilidade do sistema, que agradou e conquistou milhões de usuários ao redor do mundo.
 </p>
 <h1>Windows Vista</h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/winv.webp" />
+<img src="Imagens/winv.webp" />
         <p>
 Ao contrário do seu antecessor, o Windows Vista recebeu duras críticas dos consumidores que tiveram a infelicidade de utilizá-lo. O sistema apresentava uma série de problemas e funcionalidades mal-implementadas, sendo que uma das principais reclamações foi referente ao UAC ou User Account Control ("Controle de Contas do Usuário").
 
 Apesar disso, o Windows Vista trouxe um visual moderno que apostou na transparência e recursos visuais bem-chamativos, como gadgets na Área de Trabalho. No entanto, esses também foram recursos que desfavoreceram o SO por exigirem muito do hardware da máquina, limitando a sua atuação em computadores mais potentes.
 	</p> 
 <h1>Windows 7 </h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win%207.webp" />
+<img src="Imagens/win%207.webp" />
 
 <p>
 Vencendo com facilidade a liderança de sistemas operacionais mais utilizados do mercado, o Windows 7 disputa o topo do ranking na preferência de usuários com o XP. Lançado em 2009, esse SO trouxe mudanças visuais pequenas em relação ao seu antecessor, mas é mais rápido, estável e fácil de utilizar.
@@ -107,19 +107,19 @@ Mais da metade da população mundial que tem acesso a um computador utiliza o W
 </p>
 <h1>Windows 8 </h1>
 
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win8.webp" />
+<img src="Imagens/win8.webp" />
 
 <p>
 Lançado em 2012, o Windows 8 foi a tentativa mais radical da Microsoft de alterar o visual do seu sistema operacional. A mudança foi motivada por causa da chegada dos dispositivos que respondem ao toque, eliminando, por causa disso, o menu Iniciar e dando lugar a uma tela totalmente nova que se baseia no uso de tiles (pequenos quadrados que representam um programa).
 </p>
 
 <h1>Windows 8.1 </h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win8.1.webp" />
+<img src="Imagens/win8.1.webp" />
 <p>
 Trazendo mudanças sutis em relação ao seu antecessor, o Windows 8.1 veio em resposta às reclamações das pessoas por causa das alterações visuais que o SO sofreu. Por causa disso, a Microsoft decidiu retroceder e trazer de volta o botão do menu Iniciar.
 </p>
 <h1>Windows 10 </h1>
-<img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/win10.webp" />
+<img src="magens/win10.webp" />
 
 <p>
 Anunciado no dia 30 de setembro de 2014, o Windows 10 acabou de ter uma versão de testes liberada para o público. Ainda é muito cedo para dizer se essa variante do sistema fará sucesso, mas a Microsoft tem demonstrado que está ouvindo o feedback dos consumidores. Confira nosso artigo especial que conta as principais novidades que a última versão do sistema operacional da empresa trará para nós.
@@ -129,13 +129,13 @@ Anunciado no dia 30 de setembro de 2014, o Windows 10 acabou de ter uma versão 
 
 <h1>DISTRIBUIÇAO DO LINUX </h1>
 <h1>Linux Mint </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/linux%20m.png" />
+     <img src="Imagens/linux%20m.png" />
 <p>
 Linux Mint é uma distribuição Linux criada a partir de uma comunidade baseada no Ubuntu. É amada por pessoas usuárias casuais e profissionais na área da tecnologia. Mesmo abandonado o suporte a versão 20 do Snap, o Mint ainda é bem popular.
 </p>   
 
 <h1>Linux Ubuntu </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/lu.png" />
+     <img src="Imagens/lu.png" />
 <p>
 Desenvolvido por uma empresa chamada Canonical, o Ubuntu é baseado em um dos muitos derivados do Linux Debian. Esse software chegou ao mercado em 2004. As pessoas programadoras na época perceberam os destaques do sistema e sua facilidade na programação. A interface de linha de comando permitia que fosse usada uma sintaxe mínima para escrever programas. O Ubuntu tem três versões, todas desenvolvidas para diferentes propósitos.
 Ubuntu é a base das seguintes distribuições:
@@ -145,7 +145,7 @@ Linux Mint
 </p>   
 
 <h1> Kali Linux</h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/kl.png" />
+     <img src="Imagens/kl.png" />
 <p>
 Offensive Security é a empresa responsável pelo Kali Linux. Ele por si só é uma distro Linux baseada em Debian. Foi projetado para ajudar principalmente profissionais da área de segurança com seus inúmeros testes.
 
@@ -153,20 +153,20 @@ Offensive Security é a empresa responsável pelo Kali Linux. Ele por si só é 
 </p>   
 
 <h1> Linux Deepin</h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/ld.jpg" />
+     <img src="Imagens/ld.jpg" />
 <p>
 Deepin é uma distribuição baseada em Debian (era baseada em Ubuntu até a versão 15 lançada no final de 2015) que tem como objetivo fornecer uma interface elegante, confiável e amigável.
 </p>   
 
 <h1>Manjaro Linux </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/ml.png" />
+     <img src="Imagens/ml.png" />
 <p>
 Manjaro Linux é um sistema operacional rápido, amigável e voltado para desktop baseado no Arch Linux.
 Os principais recursos incluem processo de instalação intuitivo, detecção automática de hardware, modelo de lançamento estável, capacidade de instalar vários kernels, scripts Bash especiais para gerenciamento de drivers gráficos e extensa configurabilidade de desktop.
 </p>   
 
 <h1>Linux Debian </h1>
-<img src= "file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/ld.png" />
+<img src= "Imagens/ld.png" />
 <p>
 Debian é a distribuição mais antiga e mais popular do Linux. Como qualquer outro distro de peso, fornece uma ambientação muito agradável e rápida. Atualmente, sua última versão é a 11, que também é chamada de Bullseye.
 As três principais branchs de desenvolvimento do Debian são:
@@ -177,31 +177,31 @@ Instável
 </p>   
 
 <h1>Puppy Linux </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/pl.jpg" />
+     <img src="Imagens/pl.jpg" />
 <p>
 Puppy Linux é mais uma distribuição Linux. A diferença aqui é que o Puppy é extraordinariamente pequeno, mas cheio de recursos. O Puppy inicializa em um ramdisk e, ao contrário das distribuições de live CD que tem que extrair coisas do CD, ele carrega na RAM. Isso significa que todos os aplicativos começam em um piscar de olhos e respondem à entrada instantaneamente. 
 </p>   
 
 <h1>Linux OpenSUSE </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/lo.png" />
+     <img src="Imagens/lo.png" />
 <p>
 O OpenSUSE é mais uma das distribuições Linux que tem como objetivo fornecer uma interface moderna e rápida para pessoas usuárias de desktop e desenvolvedoras de todo mundo.
 </p>   
 
 <h1>Linux Lite </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/ll.jpg" />
+     <img src="Imagens/ll.jpg" />
 <p>
 Linux Lite é uma distribuição Linux amigável para iniciantes baseada no lançamento de suporte de longo prazo (LTS) do Ubuntu e utilizando o desktop XFCE.
 </p>   
 
 <h1>MX Linux </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/lc.jpg" />
+     <img src="Imagens/lc.jpg" />
 <p>
 MX Linux é uma distribuição Linux feita para desktop baseada na branch “Stable” do Debian e é um empreendimento cooperativo entre o antiX e as antigas comunidades MEPIS Linux.
 </p>   
 
 <h1>Linux CentOS </h1>
-     <img src="file:///C:/Users/Op.vespertino/Documents/LEIRIANE/aluno/imagens/lc.jpg" />
+     <img src="Imagens/lc.jpg" />
 <p>
 O Linux CentOS é mais um sistema operacional gratuito que tem como objetivo criar um ecossistema de código aberto confiável. Ele é baseado no RHEL, e é uma das alternativas do Red Hat Enterprise Linux por ser gratuito. 
 </p>   
